# lynx-investor-energy

./: CHANGELOG.md  README.md  pyproject.toml
.github/: PUBLISHING.md
docs/: API.md
lynx_energy/: __init__.py  __main__.py  cli.py  display.py  easter.py  interactive.py  plugin.py
lynx_energy/core/: analyzer.py
lynx_energy/export/: html_export.py  txt_export.py
lynx_energy/gui/: app.py
lynx_energy/tui/: app.py  themes.py
robot/: api_tests.robot  cli_tests.robot  export_tests.robot
tests/: test_calculator.py  test_relevance.py  test_sector_validation.py
